fix readability

--- a/public/css/tuktuk.theme.css
+++ b/public/css/tuktuk.theme.css
@@ -1,5 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,700");
-body{color:#34495e;font-size:16px;font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;background:#fff;}
+body{color:#34495e;font-size:18px;font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;background:#fff;}
 body:not(.color):not(.dark) a{color:#34495e;}
 body:not(.color):not(.dark) a:not(.button):hover,body:not(.color):not(.dark) a:not(.button):active{color:#1abc9c}
 body hr{margin:15px 0;background:#ecf0f1;background-color:rgba(0,0,0,0.1)}
@@ -17,7 +17,7 @@ body .bck.dark{background-color:#2c3e50}
 body .bck.theme{background-color:#1abc9c}
 body .bck.alert{background-color:#e74c3c !important}
 body .bck.theme,body .bck.alert{color:#fff}
-body .bck.color,body .bck.dark{color:#c4d2df;}
+body .bck.color,body .bck.dark{color:#F5E6FA;}
 body .bck.color hr,body .bck.dark hr{background:#415b75;background:rgba(0,0,0,0.2)}
 body .bck.color a,body .bck.dark a{color:#fff;}
 body .bck.color a.active,body .bck.dark a.active{color:#fff !important}
@@ -39,9 +39,9 @@ body [data-control="checkbox"]{background:#a7babe;color:#dee5e7;font-weight:700;
 body [data-control="checkbox"] label{-webkit-border-radius:20px;-moz-border-radius:20px;-ms-border-radius:20px;-o-border-radius:20px;border-radius:20px;background:#658289}
 body [data-control="checkbox"].checked{background-color:#1abc9c;color:#fff !important;}
 body [data-control="checkbox"].checked label{background-color:#138d75}
-body table{background:#fff;color:#34495e;border:.1em solid #c4d2df;}
+body table{background:#fff;color:#34495e;border:.1em solid #F5E6FA;}
 body table tr:nth-child(even) td{background-color:#f3f6f9}
-body table th{background-color:#c4d2df;color:#fff}
+body table th{background-color:#F5E6FA;color:#fff}
 body table td.highlight{background-color:#1abc9c !important;color:#fff}
 body .button,body button{color:#fff !important;font-weight:bold !important;-webkit-text-shadow:rgba(0,0,0,0.1) 0 1px 0;-moz-text-shadow:rgba(0,0,0,0.1) 0 1px 0;-ms-text-shadow:rgba(0,0,0,0.1) 0 1px 0;-o-text-shadow:rgba(0,0,0,0.1) 0 1px 0;text-shadow:rgba(0,0,0,0.1) 0 1px 0;}
 body .button:not(.transparent),body button:not(.transparent){background-color:#1abc9c;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;-webkit-box-shadow:inset 0 .1em 0 rgba(255,255,255,0.1),inset 0 -.15em 0 rgba(0,0,0,0.2),0 .15em 0 rgba(0,0,0,0.075);-moz-box-shadow:inset 0 .1em 0 rgba(255,255,255,0.1),inset 0 -.15em 0 rgba(0,0,0,0.2),0 .15em 0 rgba(0,0,0,0.075);-ms-box-shadow:inset 0 .1em 0 rgba(255,255,255,0.1),inset 0 -.15em 0 rgba(0,0,0,0.2),0 .15em 0 rgba(0,0,0,0.075);-o-box-shadow:inset 0 .1em 0 rgba(255,255,255,0.1),inset 0 -.15em 0 rgba(0,0,0,0.2),0 .15em 0 rgba(0,0,0,0.075);box-shadow:inset 0 .1em 0 rgba(255,255,255,0.1),inset 0 -.15em 0 rgba(0,0,0,0.2),0 .15em 0 rgba(0,0,0,0.075);-webkit-font-smoothing:antialiased;}
